--- a/styles/style.css
+++ b/styles/style.css
@@ -64,7 +64,7 @@ h1 {
    }
 
 .string {
-  background: white; /* Цвет фона под заголовком */
+  background: rgba(255, 196, 0, 0.336); /* Цвет фона под заголовком */
   color: black; /* Цвет текста */
-  padding: 4px; /* Поля вокруг текста */
+  background-size: 50px 50px;
 }
